[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-std",
    "io-util",
] }
tokio-util = { version = "0.7.11", features = ["codec"] }
